Bug 802656: GetUserMediaDevices: Consider no devices available an error r=anant